# predicting-default-of-a-public-firm

./: .gitignore  README.md  pyproject.toml
config/: catalog.yaml
data/processed/: summary_statistics.csv
models/: lgbm_model.pkl
notebooks/: EDA.ipynb  scratchpad.ipynb
notebooks/Sample Codes/: A1_Encoding Categorical Variables.ipynb  A1_PR-AUC.ipynb  A1_TimeSeriesSplit.ipynb  A1_Winsorization.ipynb  A1_YahooFinance.ipynb
output/: best_param.json
src/: data_processing.py  extract_financial_data.py  hyperparameter_tuning.py  main.py  model_pipeline.py  profiling_report.py
src/util/: data_schema.py  general_utility_functions.py
tests/: test_data_processing.py  test_extract_financial_data.py  test_model_pipeline.py
