[tool.poetry]
name = "predicting-default-of-a-public-firm"
version = "0.1.0"
description = ""
authors = ["hy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
pytest = "^8.0.0"
numpy = "^1.26.4"
lightgbm = "^4.3.0"
pre-commit = "^3.6.1"
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
docformatter = "^1.7.5"
ipykernel = "^6.29.2"
pandera = "^0.18.0"
scikit-learn = "^1.4.0"
scipy = "^1.12.0"
mlflow = "^2.10.2"
optuna = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
