[tool.poetry]
name = "predicting-default-of-a-public-firm"
version = "0.1.0"
description = ""
authors = ["hy"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.2.0"
pytest = "^8.0.0"
lightgbm = "^4.3.0"
pre-commit = "^3.6.1"
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
docformatter = "^1.7.5"
ipykernel = "^6.29.2"
pandera = "^0.18.0"
scikit-learn = "^1.4.0"
mlflow = "^2.10.2"
optuna = "^3.5.0"
loguru = "^0.7.2"
yfinance = "^0.2.36"
mplfinance = "^0.12.10b0"
shap = "^0.44.1"
ydata-profiling = "^4.6.5"
ipywidgets = "^8.1.2"
streamlit = "^1.31.1"
streamlit-ydata-profiling = "^0.2.1"
plotly = "^5.19.0"
nbformat = "^5.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
